<resources>
    <string name="app_name">EpiAndroid</string>
    <string name="login_text">Login :</string>
    <string name="password_text">Password :</string>
    <string name="submit_text">Submit</string>
    <string name="action_settings">Settings</string>
    <string name="token">token</string>
    <string name="login">login</string>
    <string name="token_not_found">Token not found</string>
    <string name="login_not_found">Login not found</string>
    <string name="home">Home</string>
    <string name="modules">Modules</string>
    <string name="modules_url">modules</string>
    <string name="planning">Planning</string>
    <string name="planning_url">planning</string>
    <string name="trombi">Yearbook</string>
    <string name="trombi_url">trombi</string>
    <string name="activities">Activities</string>
    <string name="projects">Projects</string>
    <string name="projects_url">projects</string>
    <string name="api_url">https://epitech-api.herokuapp.com/</string>
    <string name="password">password</string>
    <string name="auth_error">Authentication error</string>
    <string name="logout">Logout</string>
    <string name="start">start</string>
    <string name="end">end</string>
    <string name="network_error">A network error has occured. Retry later</string>
    <string name="user_url">user</string>
    <string name="event_url">event</string>
    <string name="user">user</string>
    <string name="messages_url">messages</string>
    <string name="images_url">https://cdn.local.epitech.eu/userprofil/profilview/</string>
    <string name="mark_url">marks</string>
    <string name="marks">Marks</string>
    <string name="semesters">Semesters</string>
    <string name="module_url">allmodules</string>
    <string name="prev_day">Previous Day</string>
    <string name="next_day">Next day</string>
    <string name="registered_activities">Where i\'m registered only</string>
    <string name="photo">Photo</string>
    <string name="call_user">Call him</string>
    <string name="mail_user">Mail him</string>
    <string name="add_contact">Add contact</string>
    <string name="send_email">Send email...</string>
    <string name="mailto_intent">mailto</string>
    <string name="single_module_url">module</string>
    <string name="description">Description</string>
    <string name="skills">SKILLS</string>
    <string name="project_url">project</string>
    <string name="module">Module</string>
    <string name="token_done">Token validated</string>
    <string name="validate_token">Validate your token</string>
    <string name="validate">Validate</string>
    <string name="status">Status</string>
    <string name="places">places</string>
    <string name="my_module">modules</string>
    <string name="grades">Grades</string>
    <string name="token_url">token</string>
    <string name="bad_token_size">Bad token size</string>
    <string name="project_description">Project description</string>
    <string name="dash">-</string>
    <string name="registered_only">Where i\'m registered only</string>
    <string name="in_progress_projects">In progress projects</string>
    <string name="next">next</string>
    <string name="prev">prev</string>
    <string name="profile">profile</string>
    <string name="fragment_attach">" must implement OnFragmentInteractionListener"</string>
    <string name="nslogs">" active hours. Minimum required : "</string>
    <string name="credits_and">" credits and "</string>
    <string name="spices">" spices"</string>
    <string name="gpa">"GPA : "</string>
    <string name="epitech">"Epitech "</string>
    <string name="my_marks">My marks</string>
    <string name="credits_info">"Credits : "</string>
    <string name="semester_info">"Semester : "</string>
    <string name="unregister">Unregister</string>
    <string name="register">Register</string>
    <string name="unsubscribe_success">You have been successfully unsubscribed</string>
    <string name="subscribe_success">You have been successfully subscribed</string>
    <string name="year">Year</string>
    <string name="semester">Semester</string>
    <string name="all_activities">All activities</string>
    <string name="my_planning">My Planning\n\n</string>
    <string name="note_info">"Note : "</string>
    <string name="all_projects">All projects</string>
    <string name="promo">Promo</string>
    <string name="course">Course</string>
    <string name="share_planning">Share my planning</string>
    <string name="scolaryear">scolaryear</string>
    <string name="codemodule">codemodule</string>
    <string name="codeinstance">codeinstance</string>
    <string name="codeacti">codeacti</string>
    <string name="codeevent">codeevent</string>
    <string name="acti_title">acti_title</string>
    <string name="type_title">type_title</string>
    <string name="acti_description">acti_description</string>
    <string name="room">room</string>
    <string name="code">code</string>
    <string name="module_title">module_title</string>
    <string name="tokenvalidationcode">tokenvalidationcode</string>
    <string name="token_validated">Token successfully validated</string>
    <string name="title">title</string>
    <string name="grade">grade</string>
    <string name="my_grades">My Grades\n\n</string>
    <string name="modules_array">modules</string>
    <string name="my_grades_mail">My grades</string>
    <string name="promo_api">promo</string>
    <string name="location_api">location</string>
    <string name="credits_api">credits</string>
    <string name="spice_api">spice</string>
    <string name="available_spice">available_spice</string>
    <string name="gpa_api">gpa</string>
    <string name="nsstat_api">nsstat</string>
    <string name="active">active</string>
    <string name="nslog_norm">nslog_norm</string>
    <string name="user_api">user</string>
    <string name="course_code_api">course_code</string>
    <string name="final_note_api">final_note</string>
    <string name="title_module_api">titlemodule</string>
    <string name="notes_api">notes</string>
    <string name="status_api">status</string>
    <string name="not_registered_api">notregistered</string>
    <string name="description_api">description</string>
    <string name="competence_api">competence</string>
    <string name="semester_api">semester</string>
    <string name="end_register_api">end_register</string>
    <string name="course_api">course</string>
    <string name="items_api">items</string>
    <string name="content_api">content</string>
    <string name="date_api">date</string>
    <string name="module_registered_api">module_registered</string>
    <string name="registered_api">registered</string>
    <string name="event_registered_api">event_registered</string>
    <string name="my_planning_view">My planning</string>
    <string name="project_title">project_title</string>
    <string name="nb_min_api">nb_min</string>
    <string name="nb_max_api">nb_max</string>
    <string name="note_api">note</string>
    <string name="begin_api">begin</string>
    <string name="project_api">project</string>
    <string name="end_acti_api">end_acti</string>
    <string name="begin_acti_api">begin_acti</string>
    <string name="userinfo_api">userinfo</string>
    <string name="telephone_api">telephone</string>
    <string name="value_api">value</string>
    <string name="firstname_api">firstname</string>
    <string name="lastname_api">lastname</string>
    <string name="internal_email_api">internal_email</string>
    <string name="picture_api">picture</string>
    <string name="year_api">year</string>
    <string name="year_api_date">2014</string>
    <string name="offset_api">offset</string>
    <string name="total_api">total</string>
    <string name="dateFormat">yyyy-MM-dd HH:mm:ss</string>
    <string name="displayDate">dd-MM-yyyy</string>
    <string name="displayHour">HH:mm:ss</string>
    <string name="objectString">object</string>
    <string name="nullString">null</string>
    <string name="typeText">plain/text</string>
    <string name="jpgExtension">.jpg</string>
    <string name="marksMailContent">My Marks\n\n</string>
    <string name="dateApiFormat">yyyy-MM-dd</string>
    <string name="dateDisplayFormat">EEEE yyyy-MM-dd</string>
    <string name="trueString">true</string>
    <string name="oneString">1</string>
    <string name="activityDateFormat">yyyy-MM-dd HH:mm:ss</string>
    <string name="activityDisplayFormat">dd-MM-yyyy</string>
    <string name="activityEndFormat">dd-MM-yyyy, HH:mm:ss</string>
    <string name="projectApiFormat">yyyy-MM-dd</string>
    <string name="tel">tel:</string>
    <string name="moduleApiFormat">yyyy-MM-dd</string>
    <string name="share_grades">Share my grades</string>
    <string name="share_marks">Share my marks</string>

    <string-array name="semester_array">
        <item>Semester</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>

    <string-array name="course_array">
        <item>Course</item>
        <item>bachelor/classic</item>
        <item>bachelor/tek1ed</item>
        <item>bachelor/tek2ed</item>
        <item>bachelor/tek3s</item>
    </string-array>

    <string-array name="promo_array">
        <item>Promo</item>
        <item>tek1</item>
        <item>tek2</item>
        <item>tek3</item>
        <item>tek4</item>
        <item>tek5</item>
    </string-array>
</resources>
