<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/profilePicture"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/photo"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/login_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/profilePicture"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/cityPromo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_home"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/credits"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cityPromo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/gpa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/credits"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <TextView
        android:id="@+id/logTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gpa"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp" />

    <View
        android:id="@+id/split1"
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/logTime"
        android:layout_marginTop="16dp"
        android:background="#999999" />

    <Button
        android:id="@+id/call_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/split1"
        android:onClick="call_user"
        android:text="@string/call_user" />

    <Button
        android:id="@+id/mail_user"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/call_user"
        android:onClick="mail_user"
        android:text="@string/mail_user" />

    <Button
        android:id="@+id/add_contact"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/mail_user"
        android:text="@string/add_contact" />

</RelativeLayout>